# glotaran-core

./: .gitignore  .gitmodules  README.md  Vagrantfile  opensuse-bootstrap.sh  ubuntu-bootstrap.sh
analysis-core/: CMakeLists.txt
analysis-core/codegen/: dataset.cpp  dataset.h  dataset.py
analysis-core/examples/: CMakeLists.txt  large_example.c  large_example.cpp
analysis-core/include/analysis-core/: api.h  core.h  dataset.h  datasetmanager.h  options.h
analysis-core/include/analysis-core/internal/: base.h  converter.h  member.h  pluginmanager.h  simulator.h  solver.h
analysis-core/include/analysis-core/plugin/: plugin.h  simulatorplugin.h  solverplugin.h
analysis-core/plugins/: CMakeLists.txt  kin_sim.cpp  kin_sol.cpp
analysis-core/plugins/include/: kin_sim.h  kin_sol.h
analysis-core/plugins/include/internal/: lapack.h
analysis-core/plugins/internal/: lapack.cpp
analysis-core/src/: api.cpp  core.cpp  dataset.cpp  datasetmanager.cpp  options.cpp
analysis-core/src/internal/: base.cpp  pluginmanager.cpp  simulator.cpp  solver.cpp
tests/: 3expdata.csv  CMakeLists.txt  global_fitting.cc  global_fitting_test.cc  kin_sim_irf_large_script.R  kin_sim_large_script.R  kin_sim_simple_script.R
varpro/: CMakeLists.txt  dataset.cpp  dataset.h  lapack.cpp  lapack.h  main.cpp  ntr.c  simulator.h
varpro/examples/: CMakeLists.txt  large_example.cpp
varpro/include/: varpro.h
varpro/src/: dataset.cpp  dataset.h  lapack.cpp  lapack.h  options.h  simulator.cpp  simulator.h  variableprojectionfunctor.cpp  variableprojectionfunctor.h
